welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: not found: value int
  int aL = a / 10;
  ^shareDigit:3: error: not found: value int
  int aR = a % 10;
  ^shareDigit:4: error: not found: value int
  int bL = b / 10;
  ^shareDigit:5: error: not found: value int
  int bR = b % 10;
  ^shareDigit:7: error: not found: value aL
  if (aL == bL || aL == bR || aR == bL || aR == bR)
      ^